--- a/AngularTest/Master.Master
+++ b/AngularTest/Master.Master
@@ -4,13 +4,13 @@
 
 <link href="bootstrap.min.css" rel="stylesheet" />
 <script src="jquery-1.12.0.min.js"></script>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" ng-app="myApp">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" ng-app<%--="myApp"--%>>
 <head runat="server">
     <title>Controllers</title>
 </head>
 <body>
     <div>
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder" runat="server">
         </asp:ContentPlaceHolder>
     </div>
 </body>
